--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#">News</a></li>
                     <li><a class="contact" href="#">Contact us</a></li>
                 </ul>
-                <div class="burger"><img src="/svgs/burger.svg">
+                <div class="burger"><img src="svgs/burger.svg">
 
                 </div>
             </div>
