html burger fix

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#">News</a></li>
                     <li><a class="contact" href="#">Contact us</a></li>
                 </ul>
-                <div class="burger"><img src="svgs/burger.svg">
+                <div class="burger"><img src="itsnotshowing/burger.svg">
 
                 </div>
             </div>
@@ -31,8 +31,8 @@
     </section>
 
     <!--   <div class="img-container">
-        <img class="img1" src="svg/Vector 223.svg" width="1042px" height="470">
-        <img class="img2" src="svg/Vector 1.svg" width="1438px" height="546">
+        <img class="img1" src="itsnotshowing/Vector 223.svg" width="1042px" height="470">
+        <img class="img2" src="itsnotshowing/Vector 1.svg" width="1438px" height="546">
     </div>
  -->
     <section class="divcontainer">
