--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     <li><a href="#">News</a></li>
                     <li><a class="contact" href="#">Contact us</a></li>
                 </ul>
-                <div class="burger"><img src="itsnotshowing/burger.svg">
+                <div class="burger"><img src="itsnotshowing/burger.svg"></div>
 
-                </div>
+            </div>
             </div>
         </header>
     </section>
