--- a/index.html
+++ b/index.html
@@ -24,36 +24,42 @@
                     <li><a class="contact" href="#">Contact us</a></li>
                 </ul>
                 <div class="burger"><img src="itsnotshowing/burger.svg"></div>
-
-            </div>
             </div>
         </header>
     </section>
+
+    <section class="showcase">
+        <div class="ct-showcase">
+            <h3 class="title-1">Digital Marketing</h2>
+
+                <h1 class="title-2">Work that we produce for out clients</h1>
+
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard.</p>
+                <button class="btn">
+                    <span class="btn-style">Get more details</span>
+                </button>
+
+        </div>
+
+
+
+
+
+    </section>
+
+
+
+
+
+
+
 
     <!--   <div class="img-container">
         <img class="img1" src="itsnotshowing/Vector 223.svg" width="1042px" height="470">
         <img class="img2" src="itsnotshowing/Vector 1.svg" width="1438px" height="546">
     </div>
  -->
-    <section class="divcontainer">
-
-
-
-
-
-    </section>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
