--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </section>
 
     <section class="showcase">
-        <div class="ct-showcase">
+        <div class="cnt-showcase">
             <h3 class="title-1">Digital Marketing</h2>
 
-                <h1 class="title-2">Work that we produce for out clients</h1>
+                <h1 class="title-2">Work that we produce for our clients</h1>
 
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                     industry's standard.</p>
@@ -42,6 +42,7 @@
 
         </div>
 
+        <img class="img2" src="itsnotshowing/Vector 1.svg" width="1438px" height="546">
 
 
 
@@ -57,7 +58,6 @@
 
     <!--   <div class="img-container">
         <img class="img1" src="itsnotshowing/Vector 223.svg" width="1042px" height="470">
-        <img class="img2" src="itsnotshowing/Vector 1.svg" width="1438px" height="546">
     </div>
  -->
 
