--- a/index.html
+++ b/index.html
@@ -44,50 +44,12 @@
 
         <img class="img2" src="itsnotshowing/Vector 1.svg" width="1438px" height="546">
 
-
-
-
     </section>
 
+    <section class="service">
+        <h2>Lorem Ih2sum is simply dummy text of the printing and typesetting industry.</h2>
 
-
-
-
-
-
-
-    <!--   <div class="img-container">
-        <img class="img1" src="itsnotshowing/Vector 223.svg" width="1042px" height="470">
-    </div>
- -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </section>
 
 
 
