--- a/index.html
+++ b/index.html
@@ -12,51 +12,55 @@
 </head>
 
 <body>
-    <section class="#">
+    <section class="section-header">
         <header class="header">
-            <div class="container">
-                <a class="logo" href="#"><strong>LOGO</strong></a>
-                <ul class="nav-links">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">About US</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a class="contact" href="#">Contact us</a></li>
-                </ul>
-                <div class="burger"><img src="itsnotshowing/burger.svg"></div>
-            </div>
+            <a class="logo" href="#"><strong>LOGO</strong></a>
+            <ul class="nav-links">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">About US</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">News</a></li>
+                <li><a class="contact" href="#">Contact us</a></li>
+            </ul>
+            <div class="burger"><img src="itsnotshowing/burger.svg"></div>
         </header>
     </section>
+    <div class="wrapper">
 
-    <section class="showcase">
-        <div class="cnt-showcase">
-            <h3 class="title-1">Digital Marketing</h2>
+        <section class="showcase">
+            <div class="cnt-showcase">
+                <h3 class="title-1">Digital Marketing</h2>
 
-                <h1 class="title-2">Work that we produce for our clients</h1>
+                    <h1 class="title-2">Work that we produce for our clients</h1>
 
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard.</p>
-                <button class="btn">
-                    <span class="btn-style">Get more details</span>
-                </button>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the
+                        industry's standard.</p>
+                    <button class="btn">
+                        <span class="btn-style">Get more details</span>
+                    </button>
 
-        </div>
+            </div>
 
-        <img class="img2" src="itsnotshowing/Vector 1.svg" width="1438px" height="546">
+            <img class="img2" src="itsnotshowing/Vector 1.svg" width="1438px" height="546">
 
-    </section>
+        </section>
 
-    <section class="service">
-        <h2>Lorem Ih2sum is simply dummy text of the printing and typesetting industry.</h2>
+        <section class="service">
 
-    </section>
+            <h2>Lorem Ih2sum is simply dummy text of the printing and typesetting industry.</h2>
 
-
-
-
-
+            <img class="office-img" src="itsnotshowing/office.png" width="934px" height="462">
 
 
+        </section>
+
+
+
+
+
+
+    </div>
 </body>
 
 </html>
