--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <section class="service">
 
             <h2>Lorem Ih2sum is simply dummy text of the printing and typesetting industry.</h2>
-
-            <img class="office-img" src="itsnotshowing/office.png" width="934px" height="462">
-
-
+            <div class="cnt-img">
+                <img class="office-img" src="itsnotshowing/office.png" width="934px" height="462">
+<!--                 <img class="dots-img" src="/itsnotshowing/Group 21.png" width="196px" height="154">
+ -->            </div>
         </section>
 
 
