--- a/index.html
+++ b/index.html
@@ -40,21 +40,25 @@
                         <span class="btn-style">Get more details</span>
                     </button>
 
+                    <div class="svg-img">
+                        <img class="img2" src="itsnotshowing/mountain.png" width="1438px" height="546">
+                    </div>
             </div>
-
-            <img class="img2" src="itsnotshowing/Vector 1.svg" width="1438px" height="546">
-
+            <div class="cnt-blindman">
+                <img class="blindman-img" src="itsnotshowing/blindman.png" width="675px" height="590px">
+            </div>
         </section>
 
-        <section class="service">
+        <!--    <section class="service">
 
             <h2>Lorem Ih2sum is simply dummy text of the printing and typesetting industry.</h2>
             <div class="cnt-img">
                 <img class="office-img" src="itsnotshowing/office.png" width="934px" height="462">
-<!--                 <img class="dots-img" src="/itsnotshowing/Group 21.png" width="196px" height="154">
- -->            </div>
-        </section>
+                                <img class="dots-img" src="/itsnotshowing/Group 21.png" width="196px" height="154">
 
+            </div>
+        </section>
+ -->
 
 
 
