--- a/index.html
+++ b/index.html
@@ -39,19 +39,16 @@
                     <button class="btn">
                         <span class="btn-style">Get more details</span>
                     </button>
-
             </div>
             <div class="cnt-blindman">
                 <img class="blindman-img" src="itsnotshowing/blindman.png" width="675px" height="590px">
             </div>
         </section>
+    </div>
 
-        <div class="svg-img">
-            <img class="img2" src="itsnotshowing/mountain.png" width="1438px" height="546">
-        </div>
-
-
-
+    <div class="svg-img">
+        <img class="img2" src="itsnotshowing/mountain.png" width="1438px" height="546px">
+    </div>
 
 
 
@@ -61,7 +58,10 @@
 
 
 
-        <!--    <section class="service">
+
+
+
+    <!--    <section class="service">
 
             <h2>Lorem Ih2sum is simply dummy text of the printing and typesetting industry.</h2>
             <div class="cnt-img">
@@ -76,7 +76,6 @@
 
 
 
-    </div>
 </body>
 
 </html>
