--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <li><a href="#">News</a></li>
                 <li><a class="contact" href="#">Contact us</a></li>
             </ul>
-            <div class="burger"><img src="itsnotshowing/burger.svg"></div>
+            <div class="burger">
+                <img src="itsnotshowing/burger.svg">
+            </div>
         </header>
     </section>
     <div class="wrapper">
@@ -41,7 +43,7 @@
                     </button>
             </div>
             <div class="cnt-blindman">
-                <img class="blindman-img" src="itsnotshowing/blindman.png" width="675px" height="590px">
+                <img class="blindman" src="itsnotshowing/blindman.png" width="675px" height="590px">
             </div>
         </section>
     </div>
@@ -61,16 +63,38 @@
 
 
 
-    <!--    <section class="service">
+    <section class="service">
 
-            <h2>Lorem Ih2sum is simply dummy text of the printing and typesetting industry.</h2>
-            <div class="cnt-img">
-                <img class="office-img" src="itsnotshowing/office.png" width="934px" height="462">
-                                <img class="dots-img" src="/itsnotshowing/Group 21.png" width="196px" height="154">
+        <h2 class="service-h2">Lorem Ih2sum is simply dummy text of the printing and typesetting industry.</h2>
+        <p class="service-para">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s,
+        </p>
 
+        <div class="cnt-img">
+            <div class="cnt-office">
+                 <img class="office-img" src="itsnotshowing/office.png" width="934px" height="462">
             </div>
-        </section>
- -->
+
+            <div class="cnt-dots">
+                <img class="dots-img" src="/itsnotshowing/dots.png" width="196px" height="154">
+            </div>
+        </div>
+
+        <p class="p-title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <p>
+                Lorem Ipsum is simply dummy text of the printing
+            and typesetting industry. Lorem Ipsum has been theindustry's standard dummy text ever since the 1500s,
+        </p>
+        <div>
+
+        </div>
+
+
+
+        
+    </section>
+
 
 
 
