--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="cnt-dots">
-                <img class="dots-img" src="/itsnotshowing/dots.png" width="196px" height="154">
+                <img class="dots-img" src="itsnotshowing/dots.png" width="196px" height="154">
             </div>
         </div>
 
