--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                     <h1 class="title-2">Work that we produce for our clients</h1>
 
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                    <p class="p-showcase">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                         the
                         industry's standard.</p>
                     <button class="btn">
