--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
         </section>
     </div>
 
-    <div class="svg-img">
+   <!--  <div class="svg-img">
         <img class="img2" src="itsnotshowing/mountain.png" width="1438px" height="546px">
-    </div>
+    </div> -->
 
 
-
+<div class="wrapper">
     <section class="service">
 
-        <h2 class="service-h2">Lorem Ih2sum is simply dummy text of the printing and typesetting industry.</h2>
+        <h2 class="service-h2">Lorem Ip2sum is simply dummy text of the printing and typesetting industry.</h2>
+        <h1 class="h1-descktop">Lorem Ipsum</h1>
         <p class="service-para">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
             industry's standard dummy text ever since the 1500s,
@@ -72,14 +73,92 @@
             </div>
         </div>
 
-        <p class="p-title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <p class="p-title">Lorem Ipsum is simply dummy text of the printing and<br> typesetting industry.</p>
         <p>
                 Lorem Ipsum is simply dummy text of the printing
-            and typesetting industry. Lorem Ipsum has been theindustry's standard dummy text ever since the 1500s,
+            and typesetting industry. Lorem Ipsum has been the<br> industry's standard dummy text ever since the 1500s,
         </p>
-        <div>
 
-        </div>
+    </div>
+<div class="wrapper">
+
+<div class="service-btns"> 
+    <button class="btn-s">
+        <span class="icon-style">
+    <img src="icons/3d-cube.png">
+    </span>
+    <p class="p-btn">
+        3d modeling
+    </p>
+        <span class="arrow">
+    <img src="icons/arrow.png">
+    </span>
+    </button>
+   <button class="btn-s">
+        <span class="icon-style">
+    <img src="icons/desktop.png">
+    </span>
+    <p class="p-btn">
+        AR/VR design
+    </p>
+        <span class="arrow">
+    <img src="icons/arrow.png">
+    </span>
+    </button>
+   <button class="btn-s">
+        <span class="icon-style">
+    <img src="icons/pc.png">
+    </span>
+    <p class="p-btn">
+        PC Game development
+    </p>
+        <span class="arrow">
+    <img src="icons/arrow.png">
+    </span>
+    </button>
+   <button class="btn-s">
+        <span class="icon-style">
+    <img src="icons/ps4.png">
+    </span>
+    <p class="p-btn">
+        PS4 Game development
+    </p>
+        <span class="arrow">
+    <img src="icons/arrow.png">
+    </span>
+    </button>
+   <button class="btn-s">
+        <span class="icon-style">
+    <img src="icons/vr-glasses.png">
+    </span>
+    <p class="p-btn">
+        AR/VR Solutions
+    </p>
+        <span class="arrow">
+    <img src="icons/arrow.png">
+    </span>
+    </button>
+   <button class="btn-s">
+        <span class="icon-style">
+    <img src="icons/smartphone.png">
+    </span>
+    <p class="p-btn">
+        Mobile Game development
+    </p>
+        <span class="arrow">
+    <img src="icons/arrow.png">
+    </span>
+    </button>
+
+
+</div>
+
+
+
+
+
+
+</div>
 
 
 
