--- a/index.html
+++ b/index.html
@@ -1,175 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css?v=2">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css?v=2" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <title>web agency</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <section class="section-header">
-        <header class="header">
-            <a class="logo" href="#"><strong>LOGO</strong></a>
-            <ul class="nav-links">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">About US</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">News</a></li>
-                <li><a class="contact" href="#">Contact us</a></li>
-            </ul>
-            <div class="burger">
-                <img src="itsnotshowing/burger.svg">
-            </div>
-        </header>
+      <header class="header">
+        <a class="logo" href="#"><strong>LOGO</strong></a>
+        <ul class="nav-links">
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">About US</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">News</a></li>
+          <li><a class="contact" href="#">Contact us</a></li>
+        </ul>
+        <div class="burger">
+          <img src="itsnotshowing/burger.svg" />
+        </div>
+      </header>
     </section>
     <div class="wrapper">
+      <section class="showcase">
+        <div class="cnt-showcase">
+          <h3 class="title-1">Digital Marketing</h3>
 
-        <section class="showcase">
-            <div class="cnt-showcase">
-                <h3 class="title-1">Digital Marketing</h2>
+          <h1 class="title-2">Work that we produce for our clients</h1>
 
-                    <h1 class="title-2">Work that we produce for our clients</h1>
-
-                    <p class="p-showcase">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the
-                        industry's standard.</p>
-                    <button class="btn">
-                        <span class="btn-style">Get more details</span>
-                    </button>
-            </div>
-            <div class="cnt-blindman">
-                <img class="blindman" src="itsnotshowing/blindman.png" width="675px" height="590px">
-            </div>
-        </section>
+          <p class="p-showcase">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard.
+          </p>
+          <button class="btn">
+            <span class="btn-style">Get more details</span>
+          </button>
+        </div>
+        <div class="cnt-blindman">
+          <img
+            class="blindman"
+            src="itsnotshowing/blindman.png"
+            width="675px"
+            height="590px"
+          />
+        </div>
+      </section>
     </div>
 
-   <!--  <div class="svg-img">
+    <!--  <div class="svg-img">
         <img class="img2" src="itsnotshowing/mountain.png" width="1438px" height="546px">
     </div> -->
 
-
-<div class="wrapper">
     <section class="service">
-
-        <h2 class="service-h2">Lorem Ip2sum is simply dummy text of the printing and typesetting industry.</h2>
+      <div class="wrapper">
+        <h2 class="service-h2">
+          Lorem Ip2sum is simply dummy text of the printing and typesetting
+          industry.
+        </h2>
         <h1 class="h1-descktop">Lorem Ipsum</h1>
         <p class="service-para">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s,
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s,
         </p>
 
         <div class="cnt-img">
-            <div class="cnt-office">
-                 <img class="office-img" src="itsnotshowing/office.png" width="934px" height="462">
-            </div>
+          <div class="cnt-office">
+            <img
+              class="office-img"
+              src="itsnotshowing/office.png"
+              width="934px"
+              height="462"
+            />
+          </div>
 
-            <div class="cnt-dots">
-                <img class="dots-img" src="itsnotshowing/dots.png" width="196px" height="154">
-            </div>
+          <div class="cnt-dots">
+            <img
+              class="dots-img"
+              src="itsnotshowing/dots.png"
+              width="196px"
+              height="154"
+            />
+          </div>
         </div>
 
-        <p class="p-title">Lorem Ipsum is simply dummy text of the printing and<br> typesetting industry.</p>
-        <p>
-                Lorem Ipsum is simply dummy text of the printing
-            and typesetting industry. Lorem Ipsum has been the<br> industry's standard dummy text ever since the 1500s,
+        <p class="p-title">
+          Lorem Ipsum is simply dummy text of the printing and<br />
+          typesetting industry.
         </p>
-
-    </div>
-<div class="wrapper">
-
-<div class="service-btns"> 
-    <button class="btn-s">
-        <span class="icon-style">
-    <img src="icons/3d-cube.png">
-    </span>
-    <p class="p-btn">
-        3d modeling
-    </p>
-        <span class="arrow">
-    <img src="icons/arrow.png">
-    </span>
-    </button>
-   <button class="btn-s">
-        <span class="icon-style">
-    <img src="icons/desktop.png">
-    </span>
-    <p class="p-btn">
-        AR/VR design
-    </p>
-        <span class="arrow">
-    <img src="icons/arrow.png">
-    </span>
-    </button>
-   <button class="btn-s">
-        <span class="icon-style">
-    <img src="icons/pc.png">
-    </span>
-    <p class="p-btn">
-        PC Game development
-    </p>
-        <span class="arrow">
-    <img src="icons/arrow.png">
-    </span>
-    </button>
-   <button class="btn-s">
-        <span class="icon-style">
-    <img src="icons/ps4.png">
-    </span>
-    <p class="p-btn">
-        PS4 Game development
-    </p>
-        <span class="arrow">
-    <img src="icons/arrow.png">
-    </span>
-    </button>
-   <button class="btn-s">
-        <span class="icon-style">
-    <img src="icons/vr-glasses.png">
-    </span>
-    <p class="p-btn">
-        AR/VR Solutions
-    </p>
-        <span class="arrow">
-    <img src="icons/arrow.png">
-    </span>
-    </button>
-   <button class="btn-s">
-        <span class="icon-style">
-    <img src="icons/smartphone.png">
-    </span>
-    <p class="p-btn">
-        Mobile Game development
-    </p>
-        <span class="arrow">
-    <img src="icons/arrow.png">
-    </span>
-    </button>
-
-
-</div>
-
-
-
-
-
-
-</div>
-
-
-
-
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the<br />
+          industry's standard dummy text ever since the 1500s,
+        </p>
+      </div>
+      <div class="wrapper">
+        <div class="service-btns">
+          <button class="btn-s">
+            <span class="icon-style">
+              <img src="icons/3d-cube.png" />
+            </span>
+            <p class="p-btn">3d modeling</p>
+            <span class="arrow">
+              <img src="icons/arrow.png" />
+            </span>
+          </button>
+          <button class="btn-s">
+            <span class="icon-style">
+              <img src="icons/desktop.png" />
+            </span>
+            <p class="p-btn">AR/VR design</p>
+            <span class="arrow">
+              <img src="icons/arrow.png" />
+            </span>
+          </button>
+          <button class="btn-s">
+            <span class="icon-style">
+              <img src="icons/pc.png" />
+            </span>
+            <p class="p-btn">PC Game development</p>
+            <span class="arrow">
+              <img src="icons/arrow.png" />
+            </span>
+          </button>
+          <button class="btn-s">
+            <span class="icon-style">
+              <img src="icons/ps4.png" />
+            </span>
+            <p class="p-btn">PS4 Game development</p>
+            <span class="arrow">
+              <img src="icons/arrow.png" />
+            </span>
+          </button>
+          <button class="btn-s">
+            <span class="icon-style">
+              <img src="icons/vr-glasses.png" />
+            </span>
+            <p class="p-btn">AR/VR Solutions</p>
+            <span class="arrow">
+              <img src="icons/arrow.png" />
+            </span>
+          </button>
+          <button class="btn-s">
+            <span class="icon-style">
+              <img src="icons/smartphone.png" />
+            </span>
+            <p class="p-btn">Mobile Game development</p>
+            <span class="arrow">
+              <img src="icons/arrow.png" />
+            </span>
+          </button>
+        </div>
+      </div>
     </section>
-
-
-
-
-
-
-</body>
-
+    <section class="cards-wrapper">
+      <div class="cards-sections">
+        <h3 class="h3-cards-section">Lorem Ipsum</h3>
+        <p class="p-cards-section">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry.
+        </p>
+        <div class="cards">
+          <span class="p-cards">Lorem ipsum</span>
+          <h3 class="h3-cards">Lorem Ipsum</h3>
+          <p class="pcards">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s,
+          </p>
+          <button class="cards-btn">
+            <span class="RM-btn">Read more</span>
+            <span class="arow"
+              ><img
+                class="arrow"
+                src="icons/arrow.png"
+                width="21px"
+                height="18px"
+            /></span>
+          </button>
+        </div>
+        <button></button>
+      </div>
+    </section>
+  </body>
 </html>
