--- a/index.html
+++ b/index.html
@@ -167,26 +167,126 @@
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry.
         </p>
-        <div class="cards">
-          <span class="p-cards">Lorem ipsum</span>
-          <h3 class="h3-cards">Lorem Ipsum</h3>
-          <p class="pcards">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s,
-          </p>
-          <button class="cards-btn">
-            <span class="RM-btn">Read more</span>
-            <span class="arow"
-              ><img
-                class="arrow"
-                src="icons/arrow.png"
-                width="21px"
-                height="18px"
-            /></span>
-          </button>
+        <div class="flex-scroll">
+          <div class="cards">
+            <span class="p-cards">Lorem ipsum</span>
+            <h3 class="h3-cards">Lorem Ipsum</h3>
+            <p class="pcards">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s,
+            </p>
+            <button class="cards-btn">
+              <span class="RM-btn">Read more</span>
+              <span class="arow"
+                ><img
+                  class="arrow"
+                  src="icons/arrow.png"
+                  width="21px"
+                  height="18px"
+              /></span>
+            </button>
+          </div>
+          <div class="cards">
+            <span class="p-cards">Lorem ipsum</span>
+            <h3 class="h3-cards">Lorem Ipsum</h3>
+            <p class="pcards">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s,
+            </p>
+            <button class="cards-btn">
+              <span class="RM-btn">Read more</span>
+              <span class="arow"
+                ><img
+                  class="arrow"
+                  src="icons/arrow.png"
+                  width="21px"
+                  height="18px"
+              /></span>
+            </button>
+          </div>
+          <div class="cards">
+            <span class="p-cards">Lorem ipsum</span>
+            <h3 class="h3-cards">Lorem Ipsum</h3>
+            <p class="pcards">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s,
+            </p>
+            <button class="cards-btn">
+              <span class="RM-btn">Read more</span>
+              <span class="arow"
+                ><img
+                  class="arrow"
+                  src="icons/arrow.png"
+                  width="21px"
+                  height="18px"
+              /></span>
+            </button>
+          </div>
+          <div class="cards">
+            <span class="p-cards">Lorem ipsum</span>
+            <h3 class="h3-cards">Lorem Ipsum</h3>
+            <p class="pcards">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s,
+            </p>
+            <button class="cards-btn">
+              <span class="RM-btn">Read more</span>
+              <span class="arow"
+                ><img
+                  class="arrow"
+                  src="icons/arrow.png"
+                  width="21px"
+                  height="18px"
+              /></span>
+            </button>
+          </div>
+          <div class="cards">
+            <span class="p-cards">Lorem ipsum</span>
+            <h3 class="h3-cards">Lorem Ipsum</h3>
+            <p class="pcards">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s,
+            </p>
+            <button class="cards-btn">
+              <span class="RM-btn">Read more</span>
+              <span class="arow"
+                ><img
+                  class="arrow"
+                  src="icons/arrow.png"
+                  width="21px"
+                  height="18px"
+              /></span>
+            </button>
+          </div>
+          <div class="cards">
+            <span class="p-cards">Lorem ipsum</span>
+            <h3 class="h3-cards">Lorem Ipsum</h3>
+            <p class="pcards">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s,
+            </p>
+            <button class="cards-btn">
+              <span class="RM-btn">Read more</span>
+              <span class="arow"
+                ><img
+                  class="arrow"
+                  src="icons/arrow.png"
+                  width="21px"
+                  height="18px"
+              /></span>
+            </button>
+          </div>
         </div>
-        <button></button>
+        <div class="cycle-btn">
+          <button class="cycle">&lt;</button>
+          <button class="cycle">&gt;</button>
+        </div>
       </div>
     </section>
   </body>
