--- a/index.html
+++ b/index.html
@@ -289,5 +289,33 @@
         </div>
       </div>
     </section>
+    <section class="images-section">
+      <h2 class="h2-images">Our Recent Projects</h2>
+
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting
+        industry.
+      </p>
+      <div class="images-flex">
+        <div class="i-img" style="aspect-ratio: 382/223">
+          <img src="ibad/1.png" width="382px" height="223px" />
+        </div>
+        <div class="i-img" style="aspect-ratio: 382/223">
+          <img src="ibad/2.png" width="382px" height="223px" />
+        </div>
+        <div class="i-img" style="aspect-ratio: 352/223">
+          <img src="ibad/3.png" width="352px" height="223px" />
+        </div>
+        <div class="i-img img4" style="aspect-ratio: 346/223">
+          <img src="ibad/4.png" width="246px" height="223" />
+        </div>
+        <div class="i-img" style="aspect-ratio: 401/223">
+          <img src="ibad/5.png" width="401px" height="223px" />
+        </div>
+        <div class="i-img" style="aspect-ratio: 369/223">
+          <img src="ibad/6.png" width="469px" height="223px" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
