--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li><a href="#">HOME</a></li>
           <li><a href="#">About US</a></li>
           <li><a href="#">Services</a></li>
-          <li><a href="#">News</a></li>
+          <li><a href="news.html">News</a></li>
           <li><a class="contact" href="#">Contact us</a></li>
         </ul>
         <div class="burger">
