--- a/news.html
+++ b/news.html
@@ -48,90 +48,132 @@
       </div>
     </section>
     <section class="news">
-      <div class="news-flex">
-        <div class="aspect-img">
-          <img src="itsnotshowing/desert.png" width="589px" height="295px" />
+      <div class="descktop-container">
+        <div class="cnt-news-flex">
+          <div class="news-flex">
+            <div class="aspect-img">
+              <img
+                src="itsnotshowing/desert.png"
+                width="589px"
+                height="295px"
+              />
+            </div>
+            <div class="button-div">
+              <button>John smash</button> <span>.5min</span>
+            </div>
+            <h2 class="h2-news">Lorem Ipsum is simply dummy text dummy text</h2>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book. It has
+              survived not only five centuries,
+            </p>
+            <p style="text-align: left">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+          </div>
+          <hr class="h-r2" />
+          <div class="news-flex">
+            <div class="aspect-img">
+              <img
+                class="aspectraio"
+                src="itsnotshowing/laptop.png"
+                width="587px"
+                height="295px"
+              />
+            </div>
+            <div class="button-div">
+              <button>John smash</button> <span>.5min</span>
+            </div>
+            <h2 class="h2-news">Lorem Ipsum is simply dummy text dummy text</h2>
+            <p style="text-align: left">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book. It has
+              survived not only five centuries,
+            </p>
+          </div>
+          <hr class="h-r1" / style="width: 70%;">
         </div>
-        <div class="button-div">
-          <button>John smash</button> <span>.5min</span>
+        <div class="bigctn-small-flex">
+          <div class="ctn-small-flex">
+            <div class="small-flex">
+              <div class="small-flex-img">
+                <img
+                  class="kids"
+                  src="itsnotshowing/kid.png"
+                  width="112px"
+                  height="105px"
+                />
+              </div>
+              <div class="small-flex-text">
+                <button>John smash</button> <span>.5min</span>
+                <h3 class="h3-news">
+                  Lorem Ipsum is simply dummy text dummy text ?
+                </h3>
+              </div>
+            </div>
+            <div class="small-flex">
+              <div>
+                <img
+                  class="kids"
+                  src="itsnotshowing/kid2.png"
+                  width="112px"
+                  height="105px"
+                />
+              </div>
+              <div class="small-flex-text">
+                <button>John smash</button> <span>.5min</span>
+                <h3 class="h3-news">
+                  Lorem Ipsum is simply dummy text dummy text ?
+                </h3>
+              </div>
+            </div>
+            <div class="small-flex">
+              <div>
+                <img
+                  class="kids"
+                  src="itsnotshowing/kid3.png"
+                  width="112px"
+                  height="105px"
+                />
+              </div>
+              <div class="small-flex-text">
+                <button>John smash</button> <span>.5min</span>
+                <h3 class="h3-news">
+                  Lorem Ipsum is simply dummy text dummy text ?
+                </h3>
+              </div>
+            </div>
+            <div class="small-flex">
+              <div>
+                <img
+                  class="kids"
+                  src="itsnotshowing/kid4.png"
+                  width="112px"
+                  height="105px"
+                />
+              </div>
+              <div class="small-flex-text">
+                <button>John smash</button> <span>.5min</span>
+                <h3 class="h3-news">
+                  Lorem Ipsum is simply dummy text dummy text ?
+                </h3>
+              </div>
+            </div>
+          </div>
         </div>
-        <h2 class="h2-news">Lorem Ipsum is simply dummy text dummy text</h2>
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries,
-        </p>
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry.
-        </p>
       </div>
-      <div class="news-flex">
-        <div class="aspect-img">
-          <img
-            class="aspectraio"
-            src="itsnotshowing/laptop.png"
-            width="587px"
-            height="295px"
-          />
-        </div>
-        <div class="button-div">
-          <button>John smash</button> <span>.5min</span>
-        </div>
-        <h2 class="h2-news">Lorem Ipsum is simply dummy text dummy text</h2>
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries,
-        </p>
-      </div>
-      <hr / style="width: 70%;">
-      <div class="small-flex">
-        <div class="small-flex-img">
-          <img src="itsnotshowing/kid.png" width="112px" height="105px" />
-        </div>
-        <div class="small-flex-text">
-          <button>John smash</button> <span>.5min</span>
-          <h3 class="h3-news">Lorem Ipsum is simply dummy text dummy text ?</h3>
-        </div>
-      </div>
-      <div class="small-flex">
-        <div>
-          <img src="itsnotshowing/kid2.png" width="112px" height="105px" />
-        </div>
-        <div class="small-flex-text">
-          <button>John smash</button> <span>.5min</span>
-          <h3 class="h3-news">Lorem Ipsum is simply dummy text dummy text ?</h3>
-        </div>
-      </div>
-      <div class="small-flex">
-        <div>
-          <img src="itsnotshowing/kid3.png" width="112px" height="105px" />
-        </div>
-        <div class="small-flex-text">
-          <button>John smash</button> <span>.5min</span>
-          <h3 class="h3-news">Lorem Ipsum is simply dummy text dummy text ?</h3>
-        </div>
-      </div>
-      <div class="small-flex">
-        <div>
-          <img src="itsnotshowing/kid4.png" width="112px" height="105px" />
-        </div>
-        <div class="small-flex-text">
-          <button>John smash</button> <span>.5min</span>
-          <h3 class="h3-news">Lorem Ipsum is simply dummy text dummy text ?</h3>
-        </div>
-      </div>
-
+    </section>
+    <footer>
       <h2 style="font-size: 2rem">Lorem Ipsum</h2>
       <p>
         Lorem Ipsum is simply dummy text of the printing and typesetting
         industry.
       </p>
-    </section>
+    </footer>
   </body>
 </html>
