--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
       </section>
     </div>
 
-    <!--  <div class="svg-img">
+     <div class="svg-img">
         <img class="img2" src="itsnotshowing/mountain.png" width="1438px" height="546px">
-    </div> -->
+    </div>
 
     <section class="service">
       <div class="wrapper">
