--- a/news.html
+++ b/news.html
@@ -17,7 +17,7 @@
       <header class="header">
         <a class="logo" href="#"><strong>LOGO</strong></a>
         <ul class="nav-links">
-          <li><a href="#">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li><a href="#">About US</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="news.html">News</a></li>
